// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionCheck alert matches last snapshot with a forced version update 1`] = `
Array [
  Array [
    "Force title",
    "Force message",
    Array [
      Object {
        "onPress": [Function],
        "text": "Update Now",
      },
    ],
    Object {
      "cancelable": false,
    },
  ],
]
`;

exports[`VersionCheck alert matches last snapshot with a suggested version update 1`] = `
Array [
  Array [
    "Suggested update title",
    "Suggested update message",
    Array [
      Object {
        "onPress": [Function],
        "text": "Update Now",
      },
      Object {
        "text": "Cancel",
      },
    ],
    Object {
      "cancelable": false,
    },
  ],
]
`;

exports[`VersionCheck alert matches last snapshot without a version update 1`] = `Array []`;

exports[`VersionCheck matches last snapshot with a forced version update 1`] = `<View />`;

exports[`VersionCheck matches last snapshot with a suggested version update 1`] = `<View />`;

exports[`VersionCheck matches last snapshot without a version update 1`] = `<View />`;

exports[`VersionCheck renders correctly while pending 1`] = `<Loading />`;
